tests/baselines/reference/classReferencedInContextualParameterWithinItsOwnBaseExpression.errors.txt
classReferencedInContextualParameterWithinItsOwnBaseExpression.ts(32,14): error TS2310: Type 'A' recursively references itself as a base type.
classReferencedInContextualParameterWithinItsOwnBaseExpression.ts(32,14): error TS2506: 'A' is referenced directly or indirectly in its own base expression.


==== classReferencedInContextualParameterWithinItsOwnBaseExpression.ts (2 errors) ====
    interface Pretty<To> {
      (a: To): string;
    }
    
    interface Schema<A> {
      readonly pretty?: Pretty<A>;
    }
    
    interface Class<A> {
      new (): A;
    }
    
    declare const Class: <Self>(
      identifier: string,
    ) => <Fields>(
      fields: Fields,
      annotations?: Schema<Self>,
    ) => Class<OutputFrom<Fields>>;
    
    type Type<TOutput> = {
      _TOutput: TOutput;
    };
    
    type OutputFrom<TFields> = {
      [K in keyof TFields]: "_TOutput" extends keyof TFields[K]
        ? TFields[K]["_TOutput"]
        : never;
    };
    
    declare function string(): Type<string>;
    
    export class A extends Class<A>("A")(
                 ~
!!! error TS2310: Type 'A' recursively references itself as a base type.
                 ~
!!! error TS2506: 'A' is referenced directly or indirectly in its own base expression.
      { a: string },
      {
        pretty: (a) => JSON.stringify(a),
      },
    ) {}
    